implementing grid component, fixed some parsing errors

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -15,11 +15,17 @@ table.log-files{border-collapse:collapse;}
 table.log-files tr th,
 table.log-files tr td{border:1px solid #b7b7b7;padding:4px 10px;}
 
-table.connections{border-collapse:collapse;}
-table.connections tr.marked td{background:#ddd;}
-table.connections th,
-table.connections td{border:1px solid #b7b7b7;padding:4px 10px;}
+.connections .grid-controls{overflow-y:hidden;}
+.connections table.grid-content{border-collapse:collapse;}
+.connections table.grid-content tr.marked td{background:#ddd;}
+.connections table.grid-content th,
+.connections table.grid-content td{border:1px solid #b7b7b7;padding:4px 10px;}
+.connections table.grid-content thead th,
+.connections table.grid-content td.grid-col-connected,
+.connections table.grid-content td.grid-col-disconnected{white-space:nowrap;}
 
+.connections table.grid-control-counts{margin:10px 0;}
+.connections table.grid-control-pages{margin:10px 0;float:right;}
 
 a.expand-collapse-control{
 	font-size:1.15em;
