--- a/App/Views/Scripts/connections/grid-table-body.phtml
+++ b/App/Views/Scripts/connections/grid-table-body.phtml
@@ -1,8 +1,8 @@
 <?php
-	/** @var $this \MvcCore\Ext\Controllers\DataGrids\View */
-	/** @var $grid \MvcCore\Ext\Controllers\DataGrid */
-	/** @var $model \MvcCore\Ext\Controllers\DataGrids\Models\GridModel */
-	/** @var $item \App\Models\Connection */
+	/** @var \MvcCore\Ext\Controllers\DataGrids\View $this */
+	/** @var \MvcCore\Ext\Controllers\DataGrid $grid */
+	/** @var \MvcCore\Ext\Controllers\DataGrids\Models\GridModel $model */
+	/** @var \App\Models\Connection $item */
 ?><tbody><?php
 
 	$model = $grid->GetModel();
