--- a/App/Views/Scripts/connections/index.phtml
+++ b/App/Views/Scripts/connections/index.phtml
@@ -1,5 +1,5 @@
-<?php /** @var $this \MvcCore\View */ ?>
-<?php /** @var $generalLog \App\Models\LogFile */ ?>
+<?php /** @var \MvcCore\View $this */ ?>
+<?php /** @var \App\Models\LogFile $generalLog */ ?>
 <?php /** @var $connections \App\Models\Connection[] */ ?>
 
 <div class="content">
