--- a/App/Views/Scripts/editor/index.phtml
+++ b/App/Views/Scripts/editor/index.phtml
@@ -1,4 +1,4 @@
-<?php /** @var $this \MvcCore\View */ ?>
+<?php /** @var \MvcCore\View $this */ ?>
 <?php /** @var $lines \string[] */ ?>
 
 <table class="editor">
