--- a/App/Views/Scripts/index/index.phtml
+++ b/App/Views/Scripts/index/index.phtml
@@ -1,5 +1,5 @@
-<?php /** @var $this \MvcCore\View */ ?>
-<?php /** @var $logFile \App\Models\LogFile */ ?>
+<?php /** @var \MvcCore\View $this */ ?>
+<?php /** @var \App\Models\LogFile $logFile */ ?>
 
 <div class="content">
 
