Changes for datagrid release v5.1.13.

--- a/App/Views/Scripts/connections/grid-table-body.phtml
+++ b/App/Views/Scripts/connections/grid-table-body.phtml
@@ -34,7 +34,7 @@
 						echo $item->GetMark() ? 'unmark' : 'mark';
 					?></a><?php
 				else:
-					$cellValue = $model->RenderCell($item, $configColumn, $this);
+					$cellValue = $item->RenderCell($configColumn, $this);
 					if ($configColumn->GetFilter()):
 						?><a class="grid-filter-link" href="<?php
 							echo $grid->GridFilterUrl($configColumn, $cellValue);
