--- a/App/Views/Scripts/queries/index.phtml
+++ b/App/Views/Scripts/queries/index.phtml
@@ -29,7 +29,7 @@
 	<div class="requests">
 		<a class="expand-collapse-control" href="javascript:void(0);" onclick="handleExpandOrCollapseQueries(this);">
 			<span class="expand">Expand All</span>
-			<span class="collase">Collapse All</span>
+			<span class="collapse">Collapse All</span>
 		</a><?php
 
 			$queriesStream->rewind();
@@ -63,7 +63,7 @@
 			?><div class="request">
 				<a class="expand-collapse-control" href="javascript:void(0);" onclick="handleExpandOrCollapseQueries(this);">
 					<span class="expand">Expand All</span>
-					<span class="collase">Collapse All</span>
+					<span class="collapse">Collapse All</span>
 				</a>
 				<div class="date"><?=$dateTime?></div>
 				<div class="request-content"><?php
