--- a/static/css/all.css
+++ b/static/css/all.css
@@ -32,8 +32,10 @@ table.log-files tr td{border:1px solid #b7b7b7;padding:4px 10px;}
 .connections table.grid-content thead th div.grid-head-filter button.clear{position:absolute;width:16px;top:0;right:0;overflow:hidden;text-indent:-1000px;cursor:pointer;}
 .connections table.grid-content thead th div.grid-head-filter button.clear:after{position:absolute;left:1.5px;top:0px;font-size:15px;text-indent:0px;content:'\00D7 ';}
 
-.connections table.grid-control-count-scales{margin:10px 0;}
-.connections table.grid-control-paging{margin:10px 0;float:right;}
+.connections .grid-controls-bottom{display:flex;flex-direction:row;flex-wrap:nowrap;justify-content:space-between;}
+.connections table.grid-control-count-scales{order:1;margin:10px 0;}
+.connections span.grid-control-status{order:2;display:inline-block;line-height:20px;margin:10px 0;}
+.connections table.grid-control-paging{order:3;margin:10px 0;}
 
 a.expand-collapse-control{
 	font-size:1.15em;
@@ -41,13 +43,13 @@ a.expand-collapse-control{
 	margin:0 10px 5px 0;
 	font-weight:bold;
 }
-a.expand-collapse-control .collase{
+a.expand-collapse-control .collapse{
 	display:none;
 }
 a.expand-collapse-control.expanded .expand{
 	display:none;
 }
-a.expand-collapse-control.expanded .collase{
+a.expand-collapse-control.expanded .collapse{
 	display:inline-block;
 }
 
